sudden overflow:hidden and correct layout for long names in #likes <ul>

--- a/app/assets/stylesheets/photos.sass
+++ b/app/assets/stylesheets/photos.sass
@@ -139,20 +139,26 @@
         height: 545px
 
         li
-          width: 153px
-          display: inline-block
+          width: 155px
+          float: left
           margin-bottom: 20px
-          margin-right: 5px
+          margin-right: 15px
           font-size: 14px
           line-height: 40px
           overflow: hidden
           color: #09c
+          position: relative
         
           img
-            float: left
+            position: absolute
+            top: 0px
+            left: 0px
             margin-right: 5px
             width: 40px
             height: 40px
+
+          a
+            margin-left: 46px
         
     #comments
       ul
